[update] add totp and generate password, update filters and optimization, gkey
